compiler/tests-spec/testData/psi/linked/expressions/constant-literals/real-literals/p-1/neg/3.1.kt
/*
 * KOTLIN PSI SPEC TEST (NEGATIVE)
 *
 * SPEC VERSION: 0.1-100
 * MAIN LINK: expressions, constant-literals, real-literals -> paragraph 1 -> sentence 3
 * NUMBER: 1
 * DESCRIPTION: A float suffix in the real literals right after a dot.
 */

konst konstue = 0.f
konst konstue = 00.F
konst konstue = 000.f
konst konstue = 0000.f

konst konstue = 0.F
konst konstue = 1.F
konst konstue = 2.f
konst konstue = 3.F
konst konstue = 4.f
konst konstue = 5.F
konst konstue = 6.f
konst konstue = 7.F
konst konstue = 8.f

konst konstue = 1.f
konst konstue = 22.f
konst konstue = 333.f
konst konstue = 4444.F
konst konstue = 55555.F
konst konstue = 666666.F
konst konstue = 7777777.f
konst konstue = 88888888.f
konst konstue = 999999999.F

konst konstue = 00000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000.F
konst konstue = 99999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999.f
konst konstue = 222222222222222222222222222222222222222222222222222222222222222222222222222222222222222222222222222222222222222222222222222222222222222222222222222222222222222222222222222222222222222222222222222222222222222222222222222222222222222222222222222222222222222222222222222222222222222222222222222222222222222222222.F
konst konstue = 555555555555555555555555555555555555555555555555555555555555555555555555555555555555555555555555555555555555555555555555555555555555555555555555555555555555555555555555555555555555555555555555555555555555555555555555555555555555555555555555555555555555555555555555555555555555555555555555555555555555555555555123456785012345678501234567850123456785012345678501234567850.F
